[metadata]
author = Dissect Team
author_email = dissect@fox-it.com
url = https://github.com/fox-it/dissect.ntfs
license = Affero General Public License v3
description = A Dissect module implementing a parser for the NTFS file system, used by the Windows operating system
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE, COPYRIGHT
classifiers =
  Programming Language :: Python :: 3
